<resources>
    <string name="fa_hand_scissors_o">&#xf257;</string>
    <string name="fa_hand_rock_o">&#xf255;</string>
    <string name="fa_hand_paper_o">&#xf256;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_arrow_down">&#xf063;</string>
    <string name="fa_arrow_circle_up">&#xf0aa;</string>
    <string name="fa_arrow_circle_down">&#xf0ab;</string>
    <string name="fa_check_circle">&#xf058;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_android">&#xf17b;</string>
    <string name="fa_meh_o">&#xf11a;</string>
    <string name="fa_coffee">&#xf0f4;</string>
    <string name="fa_rotate_right">&#xf01e;</string>
    <string name="fa_gavel">&#xf0e3;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_delicious">&#xf1a5;</string>
    <string name="version_s">Version %1$s</string>
    <string name="s_second">%s seconds</string>
    <string name="s_minute">%s minutes</string>
    <string name="s_people">%s people</string>
    <string name="team_s">Team %s</string>
    <string name="app_name">AKB48 Guide</string>
    <string name="blank">&#160;</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="member">Member</string>
    <string name="memory">Memory</string>
    <string name="quiz">Quiz</string>
    <string name="nanagogo">755</string>
    <string name="pedia48">48pedia.org</string>
    <string name="stage48">stage48.net</string>
    <string name="official_site_profile">Official Site Profile</string>
    <string name="google_image_search">Google Image Search</string>
    <string name="google_plus">Google+</string>
    <string name="group">Group</string>
    <string name="network_error_occurred">Network error occurred.</string>
    <string name="close">Close</string>
    <string name="member_name">Member Name</string>
    <string name="baidu_tieba">Baidu Tieba</string>
    <string name="blog">Blog</string>
    <string name="photo">Photo</string>
    <string name="ameba">Ameba</string>
    <string name="error_occurred">Error occurred.</string>
    <string name="oshimen">Oshimen</string>
    <string name="weibo">Weibo</string>
    <string name="instagram">Instagram</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="qq">QQ</string>
    <string name="team">Team</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="profile">Profile</string>
    <string name="yahoo_image_search">Yahoo! Image Search</string>
    <string name="settings">Settings</string>
    <string name="theater">Theater</string>
    <string name="open_in_web_browser">Open in web browser</string>
    <string name="parsing_error_occurred">Parsing error occurred.</string>
    <string name="open">Open</string>
    <string name="ok">OK</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="finish">Finish</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="total">Total</string>
    <string name="people">People</string>
    <string name="image_not_found">Image not found.</string>
    <string name="about_description">AKB48 Guide is developed by a fan. AKB48 Guide provides information about AKB48, SKE48, NMB48, HKT48, NGT48, JKT48, SNH48, BEJ48, GNZ48. Thank you for using AKB48 Guide.</string>
    <string name="go_to_google_play">Go to Google Play</string>
    <string name="about_akb48_guide">About AKB48 Guide</string>
    <string name="akb48_official_site">AKB48公式サイト</string>
    <string name="akb48_official_url">http://www.akb48.co.jp/</string>
    <string name="ske48_official_site">SKE48 OFFICIAL WEB SITE</string>
    <string name="ske48_official_url">http://www.ske48.co.jp/</string>
    <string name="nmb48_official_site">NMB48公式サイト</string>
    <string name="nmb48_official_url">http://www.nmb48.com/</string>
    <string name="hkt48_official_site">HKT48 OFFICIAL WEB SITE</string>
    <string name="hkt48_official_url">http://www.hkt48.jp/</string>
    <string name="ngt48_official_site">NGT48 Official Site</string>
    <string name="ngt48_official_url">http://ngt48.jp/</string>
    <string name="nogizaka46_official_site">乃木坂46公式サイト</string>
    <string name="nogizaka46_official_url">http://www.nogizaka46.com/</string>
    <string name="keyakizaka46_official_site">欅坂46公式サイト</string>
    <string name="keyakizaka46_official_url">http://www.keyakizaka46.com/</string>
    <string name="try_to_memorize_the_names_of_the_members">Try to memorize the names of the members.</string>
    <string name="try_to_match_the_names_of_the_members">Try to match the names of the members.</string>
    <string name="yahoo">Yahoo!</string>
    <string name="google">Google</string>
    <string name="loading">Loading&#8230;</string>
    <string name="akb48">AKB48</string>
    <string name="nogizaka46">Nogizaka46</string>
    <string name="about">About</string>
    <string name="question_mark">\?</string>
    <string name="choose_a_name">Choose a name.</string>
    <string name="slide">Slide</string>
    <string name="shows_the_names_of_the_members">Shows the names of the members.</string>
    <string name="select_a_group">Select a group.</string>
    <string name="no_oshimen_that_you_selected">No oshimen that you selected.</string>
    <string name="data_not_found">Data not found.</string>
    <string name="captain">Captain</string>
    <string name="leader">Leader</string>
    <string name="vice_captain">Vice Captain</string>
    <string name="vice_leader">Vice Leader</string>
    <string name="select_an_item">Select an item.</string>
    <string name="manager">Manager</string>
    <string name="website_access_problem_occurred">Website access problem occurred.</string>
    <string name="role">Role</string>
    <string name="general_manager">General Manager</string>
    <string name="general_captain">General Captain</string>
    <string name="concurrent_position">Concurrent Position</string>
    <string name="selected_election">Selected Election</string>
    <string name="election">Election</string>
    <string name="namuwiki">나무위키</string>
    <string name="select_a_blog">Select a blog.</string>
    <string name="akb48_official_blog">AKB48 Official Blog</string>
    <string name="ske48_secretariat_blog">SKE48 Secretariat Blog</string>
    <string name="nmb48_official_blog">NMB48 Official Blog</string>
    <string name="hkt48_official_blog">HKT48 Official Blog</string>
    <string name="ngt48_manager_blog">NGT48 Manager Blog</string>
    <string name="ngt48_photo_log">NGT48 Photo Log</string>
    <string name="nogizaka46_official_blog">Nogizaka46 Official Blog</string>
    <string name="keyakizaka46_official_blog">Keyakizaka46 Official Blog</string>
    <string name="today">Today</string>
    <string name="last">Last</string>
    <string name="no_more_data">No more data.</string>
    <string name="no_new_data">No new data.</string>
    <string name="this_is_the_last_of_the_data">This is the last of the data.</string>
    <string name="ske48_selected_members_special_blog">SKE48 Selected Member Spcial Blog</string>
    <string name="yesterday">Yesterday</string>
    <string name="akb48_team8_report">AKB48 Team 8 Report</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_use_official_photos">With using photos of AKB48 Group official site, Are you want to display members photo?</string>
    <string name="member_photo">Member Photo</string>
    <string name="saved">Saved.</string>
    <string name="youtube">YouTube</string>
    <string name="ske48">SKE48</string>
    <string name="nmb48">NMB48</string>
    <string name="hkt48">HKT48</string>
    <string name="ngt48">NGT48</string>
    <string name="jkt48">JKT48</string>
    <string name="snh48">SNH48</string>
    <string name="bej48">BEJ48</string>
    <string name="gnz48">GNZ48</string>
    <string name="nogizaka48">Nogizaka48</string>
    <string name="keyakizaka46">Keyakizaka48</string>
    <string name="akb48_nth_single_selected_general_election">AKB48 %s Single Selected General Election</string>
    <string name="election_catch_phase_13th">Kamisama ni Chikatte Gachi Desu.</string>
    <string name="election_catch_phase_17th">Kaasan ni Chikatte, Gachi Desu.</string>
    <string name="election_catch_phase_22nd">Kotoshi mo Gachi Desu.</string>
    <string name="election_catch_phase_27th">Fan ga Erabu 64 Giseki.</string>
    <string name="election_catch_phase_32nd">Yume wa Hitori ja Mirarenai.</string>
    <string name="election_catch_phase_37th">Yume no Genzaichi ~Rival wa Doko da~</string>
    <string name="election_catch_phase_41st">Juni Yoso Fukano, Oare no Ichiya.</string>
    <string name="election_catch_phase_45th">Bokutachi wa Dare ni Tsuiteikeba ii.</string>
    <string name="election_place_13th">Akasaka Blitz</string>
    <string name="election_place_17th">JCB Hall (Tokyo Dome City Hall)</string>
    <string name="election_place_22th">日本武道館</string>
    <string name="election_place_27th">日本武道館</string>
    <string name="election_place_32th">横浜国際総合競技場（日産スタジアム）</string>
    <string name="election_place_37th">味の素スタジアム</string>
    <string name="election_place_41th">福岡 ヤフオク!ドーム</string>
    <string name="election_place_45th">HARD OFF ECOスタジアム新潟 </string>
    <string name="suffix_rank">位</string>
    <string name="suffix_time">回</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="selected">Selected</string>
    <string name="suffix_vote">票</string>
    <string name="collecting_data">Collecting data&#8230;</string>
    <string name="under_girls">Under Girls</string>
    <string name="next_girls">Next Girls</string>
    <string name="future_girls">Future Girls</string>
    <string name="upcoming_girls">Upcoming Girls</string>
    <string name="media_selected">Media Selected</string>
    <string name="ranking_graph">Ranking Graph</string>
    <string name="vote_graph">Vote Graph</string>
    <string name="understudy">Understudy</string>
    <string name="part_time_akb">Part-time AKB</string>
    <string name="raw_photo">Raw Photo</string>
    <string name="you_can_change_it_later">In the Settings menu, you can change it later.</string>
    <string name="birthday">Birthday</string>
    <string name="working">Working&#8230;</string>
    <string name="ske48_official_blog">SKE48 Official Blog</string>
    <string name="s_years_old">%s years</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="new_">New</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="checking_whether_updated">Checking whether updated&#8230;</string>
    <string name="updating_check">Blog updating check</string>
    <string name="updating_check_interval">Blog updating check interval</string>
    <string name="select_the_blog_to_check">Select the blog to check.</string>
    <string name="select_the_blog">Select the blog</string>
    <string name="select_none">Select none</string>
    <string name="please_wait">Please wait.</string>
    <string name="minutes">Minutes</string>
    <string name="view_more">View more</string>
    <string name="read_more">Read more</string>
    <string name="akb48_group_shop">AKB48 Group Shop</string>
    <string name="chibakan">Chibakan</string>
    <string name="puzzle">Puzzle</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="action_scissors">Scissors</string>
    <string name="action_rock">Rock</string>
    <string name="action_paper">Paper</string>
</resources>