<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/loMyMemberCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvMyMemberCounterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fa_heart"
            android:textColor="#f44336"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvMyMemberCounterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="3dp"
            android:text="@string/blank"
            android:textColor="#fff"
            android:textStyle="italic|bold" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/hsMyMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp">

        <LinearLayout
            android:id="@+id/loMyMemberList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/loUserAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/loUserActionScissors"
            style="@style/SuccessButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvUserActionScissorsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_hand_scissors_o"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvUserActionScissorsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/action_scissors"
                android:textColor="#fff" />

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/loUserActionRock"
            style="@style/SuccessButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvUserActionRockIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_hand_rock_o"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvUserActionRockText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/action_rock"
                android:textColor="#fff" />

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/loUserActionPaper"
            style="@style/SuccessButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tvUserActionPaperIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_hand_paper_o"
                android:textColor="#fff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvUserActionPaperText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/action_paper"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
