<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="10dp"
              android:paddingTop="10dp">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@string/blank"
        android:scaleType="fitCenter"/>

    <RelativeLayout
        android:id="@+id/loIcon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fa_circle"
            android:textColor="#56a89e"
            android:textSize="55sp"/>

        <TextView
            android:id="@+id/tvIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fa_hand_rock_o"
            android:textColor="#ffffff"
            android:textSize="25sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:singleLine="true"
        android:textColor="@color/black_gray"/>

</LinearLayout>
